[tool.poetry]
name = "pydantic-async-validation"
version = "0.2.0"
description = "Add async validation to pydantic"
authors = ["TEAM23 GmbH <info@team23.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pydantic_async_validation"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0.0,<3.0.0"
fastapi = {version = ">=0.100.0,<1.0.0", optional = true}
pytest = ">=7.4,<9.0"

[tool.poetry.extras]
fastapi = ["fastapi"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9.0.0"
pytest-cov = ">=3,<6"
pytest-asyncio = ">=0.21.1,<0.24.0"
tox = ">=3.26,<5.0"
httpx = ">=0.24.1,<0.28.0"
ruff = ">=0.5.0,<0.6.0"
pyright = ">=1.1.350,<1.2"

[tool.ruff]
line-length = 115
target-version = "py38"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN101","ANN102","ANN401","C901","N8","B008","F405","F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
